// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a banner with a primary 'learning' action when the type is 'notice' 1`] = `
<div>
  <div
    class="banner notice"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper notice"
      >
        <svg
          data-testid="starburst"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1Zm0 14a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0v-4a1 1 0 0 0-1-1ZM2 12a1 1 0 0 1 1-1h4a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1Zm15-1a1 1 0 1 0 0 2h4a1 1 0 1 0 0-2h-4ZM5.292 5.292a.997.997 0 0 1 1.414 0l2.002 2.002a.997.997 0 0 1 0 1.414.996.996 0 0 1-1.414 0L5.292 6.707a.996.996 0 0 1 0-1.415Zm13.416 0a.997.997 0 0 0-1.414 0l-2.002 2.002a.997.997 0 0 0 0 1.414.996.996 0 0 0 1.414 0l2.002-2.001a.996.996 0 0 0 0-1.415ZM5.292 18.708a.997.997 0 0 0 1.414 0l2.002-2.002a.997.997 0 0 0 0-1.414.996.996 0 0 0-1.414 0l-2.002 2.001a.997.997 0 0 0 0 1.415Zm13.416-.048a.997.997 0 0 1-1.414 0l-2.002-1.954a.997.997 0 0 1 0-1.414.996.996 0 0 1 1.414 0l2.002 1.954a.996.996 0 0 1 0 1.415Z"
            fill="currentColor"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Bruce
        </p>
      </div>
      <div
        class="bannerAction"
      >
        <button
          class="button small subtle primary buttonChildren"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            smash me
          </span>
        </button>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders a banner with a primary action 1`] = `
<div>
  <div
    class="banner success"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper success"
      >
        <svg
          data-testid="checkmark"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.703 12.029a1 1 0 1 0-1.414 1.414l4.699 5.293a1 1 0 0 0 1.414 0L20.695 7.443a1 1 0 1 0-1.414-1.414L8.695 16.615l-3.992-4.586Z"
            fill="currentColor"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Bruce
        </p>
      </div>
      <div
        class="bannerAction"
      >
        <button
          class="button small subtle primary buttonChildren"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            smash me
          </span>
        </button>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders a notice banner 1`] = `
<div>
  <div
    class="banner notice"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper notice"
      >
        <svg
          data-testid="starburst"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1Zm0 14a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0v-4a1 1 0 0 0-1-1ZM2 12a1 1 0 0 1 1-1h4a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1Zm15-1a1 1 0 1 0 0 2h4a1 1 0 1 0 0-2h-4ZM5.292 5.292a.997.997 0 0 1 1.414 0l2.002 2.002a.997.997 0 0 1 0 1.414.996.996 0 0 1-1.414 0L5.292 6.707a.996.996 0 0 1 0-1.415Zm13.416 0a.997.997 0 0 0-1.414 0l-2.002 2.002a.997.997 0 0 0 0 1.414.996.996 0 0 0 1.414 0l2.002-2.001a.996.996 0 0 0 0-1.415ZM5.292 18.708a.997.997 0 0 0 1.414 0l2.002-2.002a.997.997 0 0 0 0-1.414.996.996 0 0 0-1.414 0l-2.002 2.001a.997.997 0 0 0 0 1.415Zm13.416-.048a.997.997 0 0 1-1.414 0l-2.002-1.954a.997.997 0 0 1 0-1.414.996.996 0 0 1 1.414 0l2.002 1.954a.996.996 0 0 1 0 1.415Z"
            fill="currentColor"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Notice me
        </p>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders a success banner 1`] = `
<div>
  <div
    class="banner success"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper success"
      >
        <svg
          data-testid="checkmark"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.703 12.029a1 1 0 1 0-1.414 1.414l4.699 5.293a1 1 0 0 0 1.414 0L20.695 7.443a1 1 0 1 0-1.414-1.414L8.695 16.615l-3.992-4.586Z"
            fill="currentColor"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Success
        </p>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders a warning banner 1`] = `
<div>
  <div
    class="banner warning"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper warning"
      >
        <svg
          data-testid="help"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.969 7c-1.375 0-2.575 1.161-2.707 1.293a1.001 1.001 0 0 0 1.41 1.417c.291-.286.904-.71 1.296-.71a1 1 0 0 1 .591 1.808c-1.01.74-1.59 1.808-1.59 2.929V14a1 1 0 0 0 2 0v-.263c0-.653.484-1.105.773-1.317A3.013 3.013 0 0 0 14.968 10c0-1.654-1.345-3-3-3ZM12 16a1 1 0 1 0 0 2 1 1 0 0 0 0-2Z"
            fill="currentColor"
            style="fill: var(--color-surface);"
          />
          <path
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
            fill="currentColor"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Warn
        </p>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders an error banner 1`] = `
<div>
  <div
    class="banner error"
    role="alert"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper error"
      >
        <svg
          data-testid="alert"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 7a1 1 0 0 0-1 1v5a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1Zm-1 10a1 1 0 1 1 2 0 1 1 0 0 1-2 0Z"
            fill="currentColor"
            style="fill: var(--color-surface);"
          />
          <path
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
            fill="currentColor"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Something went wrong
        </p>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
